# npu_plugin_elf

include/python/: improve_import.py
src/schema/: actKernel.fbs  device.fbs  dma.fbs  fileHeader.fbs  graphfile.fbs  m2i.fbs  memoryManagement.fbs  nnController.fbs  nnNCE2.fbs  software.fbs  structure.fbs  upaNCE.fbs
vpux_elf/: CMakeLists.txt  README.md  VERSIONING.md
vpux_elf/cmake/: FindFirmwareHeaders.cmake  compiler_linker_options.cmake
vpux_elf/core/include/vpux_elf/: accessor.hpp  reader.hpp  writer.hpp
vpux_elf/core/include/vpux_elf/types/: data_types.hpp  elf_header.hpp  elf_structs.hpp  program_header.hpp  relocation_entry.hpp  section_header.hpp  symbol_entry.hpp  vpu_extensions.hpp
vpux_elf/core/include/vpux_elf/utils/: error.hpp  log.hpp  utils.hpp  version.hpp
vpux_elf/core/include/vpux_elf/writer/: binary_data_section.hpp  empty_section.hpp  relocation.hpp  relocation_section.hpp  section.hpp  segment.hpp  string_section.hpp  symbol.hpp  symbol_section.hpp
vpux_elf/core/src/: accessor.cpp  writer.cpp
vpux_elf/core/src/types/: relocation_entry.cpp  symbol_entry.cpp
vpux_elf/core/src/utils/: log.cpp  utils.cpp  version.cpp
vpux_elf/core/src/writer/: empty_section.cpp  relocation.cpp  relocation_section.cpp  section.cpp  segment.cpp  string_section.cpp  symbol.cpp  symbol_section.cpp
vpux_elf/example/: CMakeLists.txt
vpux_elf/example/simplereader/: simplereader.cpp
vpux_elf/example/simplewriter/: simplewriter.cpp
vpux_elf/hpi_component/include/3720/: hpi_3720.hpp
vpux_elf/hpi_component/include/4000/: hpi_4000.hpp
vpux_elf/hpi_component/include/common/: hpi_common_interface.hpp  vpux_hpi.hpp
vpux_elf/hpi_component/src/3720/: hpi_3720.cpp
vpux_elf/hpi_component/src/4000/: hpi_4000.cpp
vpux_elf/hpi_component/src/common/: hpi_common_interface.cpp  vpux_hpi.cpp
vpux_elf/loader/: CMakeLists.txt
vpux_elf/loader/include/vpux_headers/: array_ref.hpp  buffer_details.hpp  buffer_manager.hpp  buffer_specs.hpp  device_buffer.hpp  device_buffer_container.hpp  fixed_vector.hpp  managed_buffer.hpp  metadata.hpp  metadata_primitives.hpp  platform.hpp  serial_metadata.hpp  serial_struct_base.hpp
vpux_elf/loader/include/vpux_loader/: vpux_loader.hpp
vpux_elf/loader/include/vpux_sym_tab/3720/: SymTabGen.h
vpux_elf/loader/src/: device_buffer_container.cpp  managed_buffer.cpp  platform.cpp  vpux_loader.cpp
